--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,7 @@ set -g @tpm_plugins "            \
   tmux-plugins/tmux-continuum    \
   tmux-plugins/tmux-sensible     \
   christoomey/vim-tmux-navigator \
+  janoamaral/tokyo-night-tmux    \
 "
 
 set -g @continuum-restore 'on'
@@ -19,9 +20,13 @@ bind s choose-tree -swZ -O name
 set -g status-right "#(date +'%d-%m-%Y %H:%M')"
 
 # Add truecolor support
-set -sa terminal-overrides ",screen-256color:RGB"
+# set -sa terminal-overrides ",screen-256color:RGB"
 # Default terminal is 256 colors
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+
+set-option -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ',xterm-256color:Tc'
+set -g status-bg '#414868'
 
 # disable rbenv variable in new panes
 set-environment -gu RBENV_VERSION
