--- a/i3/config
+++ b/i3/config
@@ -11,7 +11,7 @@ bar {
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 bindsym $mod+Home exec --no-startup-id i3lock
 bindsym $mod+End exec --no-startup-id sudo pm-suspend
 
