--- a/i3status.conf
+++ b/i3status.conf
@@ -20,9 +20,9 @@ order += "cpu_usage"
 # order += "disk /home"
 #order += "wireless _first_"
 # order += "ethernet _first_"
-order += "battery 0"
 # order += "load"
 order += "memory"
+order += "battery 0"
 order += "tztime local"
 
 cpu_usage {
@@ -51,26 +51,21 @@ battery 0 {
         format_down = "No battery"
         last_full_capacity = true
         integer_battery_capacity = true
-        # status_chr = ""
         status_chr = "⚡"
-        # status_bat = "bat"
-        # status_bat = "☉"
         status_bat = "🔋"
-        # status_unk = "?"
-        status_unk = ""
-        # status_full = ""
+        status_unk = "?"
         status_full = "☻"
-        low_threshold = 15
-        threshold_type = time
+        low_threshold = 25
+        threshold_type = percentage
 }
 
 memory {
-        format = "%used | %available"
-        threshold_degraded = "1G"
+        format = " %free "
+        threshold_degraded = "4G"
         format_degraded = "MEMORY < %available"
 }
 
 tztime local {
         # format = "%Y-%m-%d %H:%M:%S"
-        format = " %H:%M %d/%m"
+        format = " %H:%M %d/%m "
 }
