--- a/i3status.conf
+++ b/i3status.conf
@@ -18,7 +18,7 @@ general {
 order += "cpu_usage"
 # order += "disk /"
 # order += "disk /home"
-#order += "wireless _first_"
+# order += "wireless _first_"
 # order += "ethernet _first_"
 # order += "load"
 order += "memory"
@@ -26,7 +26,7 @@ order += "battery 0"
 order += "tztime local"
 
 cpu_usage {
-        format = " cpu  %usage "
+        format = " %usage "
 }
 
 load {
@@ -66,6 +66,5 @@ memory {
 }
 
 tztime local {
-        # format = "%Y-%m-%d %H:%M:%S"
-        format = " %H:%M %d/%m "
+        format = "%d/%m - %H:%M "
 }
