--- a/i3status.conf
+++ b/i3status.conf
@@ -46,8 +46,8 @@ ethernet _first_ {
 }
 
 battery 0 {
-        #format = "%status %percentage %remaining %emptytime"
-        format = " %status %percentage"
+        format = "%status %percentage (%remaining %consumption)"
+        #format = " %status %percentage"
         format_down = "No battery"
         last_full_capacity = true
         integer_battery_capacity = true
