--- a/i3-laptop/config
+++ b/i3-laptop/config
@@ -22,9 +22,8 @@ bar {
 
 exec --no-startup-id "picom -b --config /home/jesper/.config/picom.conf"
 
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend. Use loginctl lock-session to lock your screen.
-# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the screen before suspend. Use loginctl lock-session to lock your screen.
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 bindsym $mod+Shift+Home exec --no-startup-id i3lock
 bindsym End exec --no-startup-id systemctl suspend
 
@@ -54,7 +53,6 @@ bindsym $mod+Shift+q kill
 
 # start program launcher
 bindsym $mod+d exec --no-startup-id "rofi -combi-modi window,drun -theme solarized -font 'JetBrainsMono 14' -show combi -icon-theme 'Papirus' -show-icons"
-# bindsym $mod+Shift+e exec --no-startup-id emote
 
 # define directional keys
 set $up k
@@ -93,11 +91,6 @@ bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
-
-# focus the parent container
-# bindsym $mod+a focus parent
-# focus the child container
-#bindsym $mod+d focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -151,15 +144,14 @@ bindsym $mod+n exec nautilus ~
 for_window [all] border pixel 1
 
 # Show a floating calc terminal with Mod+c
-for_window [instance="Alacritty" title="My Calculator"] border pixel 5
-for_window [instance="Alacritty" title="My Calculator"] floating enable
+for_window [instance="Alacritty" title="My Calculator"] border pixel 5 floating enable
 bindsym $mod+c exec alacritty -t "My Calculator" -e qalculate.qalc
 # bindsym $mod+c exec qalculate
 for_window [class="qalculate-gtk" instance="Qalculate!"] floating enable
 
 # Show todos
 for_window [instance="Alacritty" title="My Todos"] floating enable
-bindsym $mod+t exec alacritty -t "My Todos" -e nvim ~/notes/todo.md
+bindsym $mod+t exec alacritty -t "My Todos" -e nvim ~/notes/peanut/todo.md
 
 # Floating vim
 for_window [instance="Alacritty" title="Temp Vim"] floating enable
@@ -168,7 +160,6 @@ bindsym $mod+v exec alacritty -t "Temp Vim" -e ~/bin/tempvim
 # Fix handing of popups
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
-
 for_window [class="Ulauncher"] border pixel 0
 
 # Application specific assignments
@@ -188,10 +179,8 @@ exec --no-startup-id flameshot
 exec --no-startup-id playerctld daemon
 exec --no-startup-id dropbox start
 exec --no-startup-id emote
-# exec --no-startup-id guake
-# exec --no-startup-id mullvad
 exec --no-startup-id feh --randomize --bg-fill ~/Files/wallpapers/*
-# exec --no-startup-id stretchly
+exec --no-startup-id ulauncher
 
 set $connectCheck nm-online --quiet --timeout=300
 
