--- a/tmux.conf
+++ b/tmux.conf
@@ -23,8 +23,8 @@ set -g status-right "#(date +'%d-%m-%Y %H:%M')"
 # Default terminal is 256 colors
 # set -g default-terminal "screen-256color"
 
-set-option -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ',xterm-256color:Tc'
+set-option -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ',tmux-256color:Tc'
 set -g status-bg '#414868'
 
 # disable rbenv variable in new panes
