--- a/i3-laptop/config
+++ b/i3-laptop/config
@@ -181,6 +181,8 @@ exec --no-startup-id dropbox start
 exec --no-startup-id emote
 exec --no-startup-id feh --randomize --bg-fill ~/Files/wallpapers/*
 exec --no-startup-id ulauncher
+exec --no-startup-id /usr/bin/caffeine-indicator
+exec --no-startup-id mullvad
 
 set $connectCheck nm-online --quiet --timeout=300
 
