--- a/i3/config
+++ b/i3/config
@@ -40,7 +40,7 @@ bindsym $mod+Return exec playerctl play-pause
 bindsym $mod+Right exec playerctl next
 bindsym $mod+Left exec playerctl previous
 
-focus_follows_mouse yes
+# focus_follows_mouse yes
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
