--- a/i3status.conf
+++ b/i3status.conf
@@ -15,18 +15,17 @@ general {
 }
 
 # order += "ipv6"
+# order += "ethernet _first_"
 order += "cpu_usage"
 # order += "disk /"
 # order += "disk /home"
 # order += "wireless _first_"
-# order += "ethernet _first_"
 # order += "load"
 order += "memory"
-order += "battery 0"
 order += "tztime local"
 
 cpu_usage {
-        format = " %usage "
+        format = " ⚙️ usage "
 }
 
 load {
@@ -45,26 +44,15 @@ ethernet _first_ {
         format_down = " no lan "
 }
 
-battery 0 {
-        format = "%status %percentage (%remaining %consumption)"
-        #format = " %status %percentage"
-        format_down = "No battery"
-        last_full_capacity = true
-        integer_battery_capacity = true
-        status_chr = "⚡"
-        status_bat = "🔋"
-        status_unk = "?"
-        status_full = "☻"
-        low_threshold = 25
-        threshold_type = percentage
-}
-
 memory {
-        format = " %free "
-        threshold_degraded = "4G"
-        format_degraded = "MEMORY < %available"
+        format = "🧠 %used / %total "
+        threshold_degraded = "20%"
+        threshold_critical = "10%"
+        format_degraded = "MEMORY LOW < %free"
 }
 
 tztime local {
-        format = "%d/%m | %H:%M "
+        # format = "%Y-%m-%d %H:%M:%S"
+        timezone = "CET"
+        format = "🕓 %H:%M %-d/%-m"
 }
