--- a/i3status.conf
+++ b/i3status.conf
@@ -25,7 +25,7 @@ order += "memory"
 order += "tztime local"
 
 cpu_usage {
-        format = " ⚙️ usage "
+        format = " ⚙️ %usage "
 }
 
 load {
