--- a/i3-laptop/config
+++ b/i3-laptop/config
@@ -175,7 +175,7 @@ assign [class="Slack"] $ws4
 exec --no-startup-id nm-applet --indicator
 exec --no-startup-id pasystray
 exec --no-startup-id blueman-applet
-exec --no-startup-id copyq
+# exec --no-startup-id copyq
 exec --no-startup-id flameshot
 exec --no-startup-id playerctld daemon
 exec --no-startup-id dropbox start
