--- a/alacritty.yml
+++ b/alacritty.yml
@@ -132,4 +132,6 @@ schemes:
       - { index: 16, color: '0xff9e64' }
       - { index: 17, color: '0xdb4b4b' }
 
-colors: *themeTokyo
+# colors: *themeTokyo
+import:
+ - ~/.config/alacritty/themes/themes/tokyonight.yaml
