--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,6 @@ set -g @tpm_plugins "            \
   tmux-plugins/tmux-continuum    \
   tmux-plugins/tmux-sensible     \
   christoomey/vim-tmux-navigator \
-  janoamaral/tokyo-night-tmux    \
 "
 
 set -g @continuum-restore 'on'
@@ -25,7 +24,7 @@ set -g status-right "#(date +'%d-%m-%Y %H:%M')"
 
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
-set -g status-bg '#414868'
+# set -g status-bg '#414868'
 
 # disable rbenv variable in new panes
 set-environment -gu RBENV_VERSION
