--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,7 @@ set -g status-right "#(date +'%d-%m-%Y %H:%M')"
 # set -sa terminal-overrides ",screen-256color:RGB"
 # Default terminal is 256 colors
 # set -g default-terminal "screen-256color"
+set -ag terminal-overrides ",$TERM:RGB"
 
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
