--- a/alacritty.yml
+++ b/alacritty.yml
@@ -20,118 +20,5 @@ selection:
 key_bindings:
    - { key: Key3,     mods: Alt,     chars: "#" }
 
-schemes:
-  solarized-light: &themeLight
-    primary:
-      background: '0xfdf6e3'
-      foreground: '0x586e75'
-
-    # Colors the cursor will use if `custom_cursor_colors` is true
-    cursor:
-      text: '0xfdf6e3'
-      cursor: '0x586e75'
-
-    # Normal colors
-    normal:
-      black:   '0xfdf6e3'
-      red:     '0xdc322f'
-      green:   '0x859900'
-      yellow:  '0xb58900'
-      blue:    '0x268bd2'
-      magenta: '0x6c71c4'
-      cyan:    '0x2aa198'
-      white:   '0x586e75'
-
-    # Bright colors
-    bright:
-      black:   '0x839496'
-      red:     '0xdc322f'
-      green:   '0x859900'
-      yellow:  '0xb58900'
-      blue:    '0x268bd2'
-      magenta: '0x6c71c4'
-      cyan:    '0x2aa198'
-      white:   '0x002b36'
-
-    indexed_colors:
-      - { index: 16, color: '0xcb4b16' }
-      - { index: 17, color: '0xd33682' }
-      - { index: 18, color: '0xeee8d5' }
-      - { index: 19, color: '0x93a1a1' }
-      - { index: 20, color: '0x657b83' }
-      - { index: 21, color: '0x073642' }
-
-  solarized-dark: &themeDark
-    primary:
-      background: '0x002b36'
-      foreground: '0x93a1a1'
-
-    # Colors the cursor will use if `custom_cursor_colors` is true
-    cursor:
-      text: '0x002b36'
-      cursor: '0x93a1a1'
-
-    # Normal colors
-    normal:
-      black:   '0x002b36'
-      red:     '0xdc322f'
-      green:   '0x859900'
-      yellow:  '0xb58900'
-      blue:    '0x268bd2'
-      magenta: '0x6c71c4'
-      cyan:    '0x2aa198'
-      white:   '0x93a1a1'
-
-    # Bright colors
-    bright:
-      black:   '0x657b83'
-      red:     '0xdc322f'
-      green:   '0x859900'
-      yellow:  '0xb58900'
-      blue:    '0x268bd2'
-      magenta: '0x6c71c4'
-      cyan:    '0x2aa198'
-      white:   '0xfdf6e3'
-
-    indexed_colors:
-      - { index: 16, color: '0xcb4b16' }
-      - { index: 17, color: '0xd33682' }
-      - { index: 18, color: '0x073642' }
-      - { index: 19, color: '0x586e75' }
-      - { index: 20, color: '0x839496' }
-      - { index: 21, color: '0xeee8d5' }
-
-  tokyonight: &themeTokyo
-    primary:
-      background: '0x1a1b26'
-      foreground: '0xc0caf5'
-
-    # Normal colors
-    normal:
-      black:   '0x15161e'
-      red:     '0xf7768e'
-      green:   '0x9ece6a'
-      yellow:  '0xe0af68'
-      blue:    '0x7aa2f7'
-      magenta: '0xbb9af7'
-      cyan:    '0x7dcfff'
-      white:   '0xa9b1d6'
-
-    # Bright colors
-    bright:
-      black:   '0x414868'
-      red:     '0xf7768e'
-      green:   '0x9ece6a'
-      yellow:  '0xe0af68'
-      blue:    '0x7aa2f7'
-      magenta: '0xbb9af7'
-      cyan:    '0x7dcfff'
-      white:   '0xc0caf5'
-
-    indexed_colors:
-      - { index: 16, color: '0xff9e64' }
-      - { index: 17, color: '0xdb4b4b' }
-
-# colors: *themeTokyo
-import:
- - ~/.config/alacritty/themes/themes/tokyonight.yaml
+# import:
+#  - ~/.config/alacritty/themes/themes/tokyonight.yaml
