--- a/i3/config
+++ b/i3/config
@@ -188,7 +188,7 @@ workspace $ws5 output $main_monitor
 # Background apps
 exec --no-startup-id feh --randomize --bg-fill ~/Files/wallpapers/*
 exec --no-startup-id nm-applet
-# exec --no-startup-id copyq
+exec --no-startup-id copyq
 exec --no-startup-id flameshot
 exec --no-startup-id playerctld daemon
 exec --no-startup-id dropbox start
