--- a/i3-laptop/config
+++ b/i3-laptop/config
@@ -150,9 +150,12 @@ for_window [all] border pixel 1
 for_window [class="Qalculate-gtk"] floating enable, resize set 800 400, move position center
 bindsym $mod+c exec qalculate
 
-# Show todos
-for_window [instance="Alacritty" title="My Todos"] floating enable
-bindsym $mod+t exec alacritty -t "My Todos" -e nvim ~/notes/peanut/todo.md
+# Floating todoist
+for_window [class="Todoist"] floating enable
+for_window [class="Todoist"] resize set 1000 800, move position center
+for_window [class="Todoist"] border pixel 5
+for_window [class="Todoist"] move scratchpad
+bindsym $mod+t [class="Todoist"] scratchpad show
 
 # Floating vim
 for_window [instance="Alacritty" title="Temp Vim"] floating enable
@@ -184,6 +187,7 @@ exec --no-startup-id feh --randomize --bg-fill ~/Files/wallpapers/*
 exec --no-startup-id ulauncher
 exec --no-startup-id /usr/bin/caffeine-indicator
 exec --no-startup-id mullvad
+exec --no-startup-id todoist
 
 set $connectCheck nm-online --quiet --timeout=300
 
