--- a/espanso.yml
+++ b/espanso.yml
@@ -20,7 +20,7 @@ matches:
     replace: "thejspr@gmail.com"
 
   - trigger: ",we"
-    replace: "jesper@teampeanut.com"
+    replace: "j@webyard.dk"
 
 
   # Date
