--- a/i3/config
+++ b/i3/config
@@ -147,7 +147,7 @@ bindsym $mod+c exec qalculate
 
 # Show todos
 # for_window [instance="Alacritty" title="My Todos"] floating enable
-# bindsym $mod+t exec alacritty -t "My Todos" -e nvim ~/notes/peanut/todo.md
+# bindsym $mod+t exec alacritty -t "My Todos" -e nvim ~/notes/todo.md
 
 # Floating vim
 # for_window [instance="Alacritty" title="Temp Vim"] floating enable
