--- a/i3/config
+++ b/i3/config
@@ -49,7 +49,7 @@ floating_modifier $mod
 bindsym $mod+Shift+q kill
 
 # start program launcher
-bindsym $mod+d exec --no-startup-id "rofi -combi-modi window,drun -theme solarized -font 'JetBrainsMono 14' -show combi -icon-theme 'Papirus' -show-icons"
+bindsym $mod+d exec --no-startup-id "rofi -combi-modi drun,window -theme solarized -font 'JetBrainsMono 14' -show combi -icon-theme 'Papirus' -show-icons"
 bindsym $mod+g exec --no-startup-id echo "" | rofi -dmenu -p "Search:" | xargs -I{} xdg-open https://www.google.dk/search?q={}
 
 # define directional keys
@@ -165,6 +165,8 @@ for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 for_window [class="Ulauncher"] border pixel 0
 
+for_window [class="^jetbrains-.+"][window_type=dialog] focus
+
 # Application specific assignments
 assign [class="Alacritty"] $ws1
 assign [class="google-chrome"] $ws1
@@ -199,6 +201,7 @@ exec --no-startup-id ulauncher
 exec --no-startup-id pasystray
 exec --no-startup-id pactl load-module module-switch-on-connect
 exec --no-startup-id todoist
+exec --no-startup-id ~/apps/jetbrains-toolbox --minimize
 
 
 set $connectCheck nm-online --quiet --timeout=300
@@ -208,7 +211,7 @@ exec alacritty --command tmux
 exec $connectCheck && google-chrome
 
 exec obsidian
-exec weekday && $connectCheck && slack
+# exec weekday && $connectCheck && slack
 exec $connectCheck && firefox
 # exec $connectCheck && spotify
 
