--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+set -g @catppuccin_flavour 'mocha'
+
 # TMUX plugin manager
 set -g @tpm_plugins "            \
   tmux-plugins/tpm               \
@@ -5,6 +7,7 @@ set -g @tpm_plugins "            \
   tmux-plugins/tmux-continuum    \
   tmux-plugins/tmux-sensible     \
   christoomey/vim-tmux-navigator \
+  catppuccin/tmux
 "
 
 set -g @continuum-restore 'on'
