--- a/alacritty.yml
+++ b/alacritty.yml
@@ -2,9 +2,9 @@ env:
   TERM: xterm-256color
 
 font:
-  size: 14
+  size: 16
   normal:
-    family: 'Hack Nerd Font'
+    family: 'Inconsolata Nerd Font'
     style: 'Regular'
 
 window:
