--- a/i3/config
+++ b/i3/config
@@ -1,17 +1,17 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 set $mod Mod4
 
-font pango:JetBrainsMono 0
+font pango:Inconsolata Nerd Font 0
 
 bar {
   status_command i3status --config ~/.i3status.conf
-  font pango:JetBrainsMono 12
+  font pango:Inconsolata Nerd Font 10
   tray_output DP-4
   separator_symbol " | "
   position top
   padding 0
   tray_padding 4
-  workspace_min_width 200
+  workspace_min_width 160
 
   colors {
     background #1a1b26
@@ -28,9 +28,9 @@ exec --no-startup-id "picom -b --config ~/.config/picom.conf"
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-bindsym $mod+Home exec --no-startup-id i3lock
-bindsym $mod+End exec --no-startup-id sudo pm-suspend
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+bindsym $mod+Home exec --no-startup-id i3lock -i ~/Files/wallpapers/3840x2160/1095029.png
+bindsym $mod+End exec --no-startup-id sudo systemctl suspend
 
 # Desktop media control
 bindsym $mod+Up exec pactl set-sink-volume @DEFAULT_SINK@ +5%
@@ -40,6 +40,7 @@ bindsym $mod+Return exec playerctl play-pause
 bindsym $mod+Right exec playerctl next
 bindsym $mod+Left exec playerctl previous
 
+bindsym $mod+Shift+e exec rofi -modi emoji -show emoji -emoji-format '{emoji}'
 # focus_follows_mouse yes
 
 # Use Mouse+$mod to drag floating windows to their wanted position
@@ -49,7 +50,7 @@ floating_modifier $mod
 bindsym $mod+Shift+q kill
 
 # start program launcher
-bindsym $mod+d exec --no-startup-id "rofi -combi-modi drun,window -theme solarized -font 'JetBrainsMono 14' -show combi -icon-theme 'Papirus' -show-icons"
+bindsym $mod+d exec --no-startup-id "rofi -combi-modi drun,window -theme solarized -font 'Inconsolata Nerd Font 20' -show combi -icon-theme 'Papirus' -show-icons"
 bindsym $mod+g exec --no-startup-id echo "" | rofi -dmenu -p "Search:" | xargs -I{} xdg-open https://www.google.dk/search?q={}
 
 # define directional keys
@@ -139,7 +140,7 @@ bindsym $mod+minus scratchpad show
 bindsym $mod+x exec flameshot gui
 
 # file-browser
-bindsym $mod+n exec nautilus ~/Downloads
+bindsym $mod+n exec pcmanfm
 
 # Show a floating calc terminal with Mod+c https://github.com/Qalculate/libqalculate
 for_window [class="Qalculate-gtk"] floating enable, resize set 800 400, move position center
@@ -164,7 +165,6 @@ bindsym $mod+t [class="Todoist"] scratchpad show
 # Fix handing of popups
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
-for_window [class="Ulauncher"] border pixel 0
 for_window [class="^jetbrains-.+"][window_type=dialog] focus
 
 # Application specific assignments
@@ -194,10 +194,8 @@ exec --no-startup-id copyq
 exec --no-startup-id flameshot
 exec --no-startup-id playerctld daemon
 exec --no-startup-id dropbox start
-exec --no-startup-id emote
 exec --no-startup-id playerctld daemon
 exec --no-startup-id blueman-applet
-exec --no-startup-id ulauncher
 exec --no-startup-id pasystray
 exec --no-startup-id pactl load-module module-switch-on-connect
 exec --no-startup-id todoist
@@ -216,4 +214,4 @@ exec obsidian
 # exec $connectCheck && firefox
 # exec $connectCheck && spotify
 
-# vim: ft=i3config
+# vim: ft=i3config formatoptions-=t
