--- a/i3/config
+++ b/i3/config
@@ -1,7 +1,9 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 set $mod Mod4
 
-font pango:Inconsolata Nerd Font 0
+include ~/.config/i3/`hostname`.conf
+
+font pango:Inconsolata Nerd Font 14
 
 bar {
   status_command i3status --config ~/.i3status.conf
@@ -11,7 +13,7 @@ bar {
   position top
   padding 0
   tray_padding 4
-  workspace_min_width 160
+  workspace_min_width 125
 
   colors {
     background #1a1b26
@@ -41,7 +43,11 @@ bindsym $mod+Right exec playerctl next
 bindsym $mod+Left exec playerctl previous
 
 bindsym $mod+Shift+e exec rofi -modi emoji -show emoji -emoji-format '{emoji}'
-# focus_follows_mouse yes
+
+# install rofi-search-git and googler
+bindsym $mod+g exec --no-startup-id rofi-search
+
+focus_follows_mouse yes
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -51,7 +57,6 @@ bindsym $mod+Shift+q kill
 
 # start program launcher
 bindsym $mod+d exec --no-startup-id "rofi -combi-modi drun,window -theme solarized -font 'Inconsolata Nerd Font 20' -show combi -icon-theme 'Papirus' -show-icons"
-bindsym $mod+g exec --no-startup-id echo "" | rofi -dmenu -p "Search:" | xargs -I{} xdg-open https://www.google.dk/search?q={}
 
 # define directional keys
 set $up k
@@ -142,14 +147,12 @@ bindsym $mod+x exec flameshot gui
 # file-browser
 bindsym $mod+n exec pcmanfm
 
+for_window [all] border pixel 1
+
 # Show a floating calc terminal with Mod+c https://github.com/Qalculate/libqalculate
 for_window [class="Qalculate-gtk"] floating enable, resize set 800 400, move position center
 for_window [class="Qalculate-gtk"] move scratchpad
 bindsym $mod+c [class="Qalculate-gtk"] scratchpad show
-
-# Show todos
-# for_window [instance="Alacritty" title="My Todos"] floating enable
-# bindsym $mod+t exec alacritty -t "My Todos" -e nvim ~/notes/todo.md
 
 # Floating vim
 # for_window [instance="Alacritty" title="Temp Vim"] floating enable
@@ -171,25 +174,12 @@ for_window [class="^jetbrains-.+"][window_type=dialog] focus
 assign [class="Alacritty"] $ws1
 assign [class="google-chrome"] $ws1
 assign [class="obsidian"] $ws2
-
 assign [class="Slack"] $ws4
 assign [class="firefox"] $ws3
-
 assign [class="spotify"] $ws4
 
-# Multi monitor settings
-set $main_monitor DP-4
-set $second_monitor HDMI-0
-
-workspace $ws1 output $main_monitor
-workspace $ws2 output $main_monitor
-workspace $ws3 output $second_monitor
-workspace $ws4 output $second_monitor
-workspace $ws5 output $main_monitor
-
 # Background apps
-exec --no-startup-id feh --randomize --bg-fill ~/Files/wallpapers/*
-exec --no-startup-id nm-applet
+exec --no-startup-id nm-applet --indicator
 exec --no-startup-id copyq
 exec --no-startup-id flameshot
 exec --no-startup-id playerctld daemon
@@ -201,12 +191,13 @@ exec --no-startup-id pactl load-module module-switch-on-connect
 exec --no-startup-id todoist
 exec --no-startup-id qalculate-gtk
 exec --no-startup-id ~/apps/jetbrains-toolbox --minimize
-
+exec --no-startup-id redshift-gtk
 
 set $connectCheck nm-online --quiet --timeout=300
 
 # Startup applications
 exec alacritty --command tmux
+exec obsidian
 exec $connectCheck && google-chrome
 
 exec obsidian
