--- a/i3/desktop.conf
+++ b/i3/desktop.conf
@@ -10,6 +10,8 @@ workspace $ws3 output $second_monitor
 workspace $ws4 output $second_monitor
 workspace $ws5 output $main_monitor
 
+bindsym $mod+Home exec --no-startup-id i3lock -i ~/Files/wallpapers/3840x2160/1095029.png
+
 exec --no-startup-id feh --randomize --bg-fill ~/Files/wallpapers/*
 # vim: ft=i3config
 
