--- a/i3/laptop.conf
+++ b/i3/laptop.conf
@@ -8,6 +8,8 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
+bindsym $mod+Home exec --no-startup-id i3lock -i ~/files/wallpapers/183_FyHF0dp.png
+
 exec_always --no-startup-id feh --randomize --bg-fill ~/files/wallpapers/*
 
 # vim: ft=i3config
